[package]
name = "cli_sahko"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"   
mongodb = "3.2.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = "0.4"
bson = "2.5"